# connect_llm

./: .gitignore  Cargo.toml  README.md
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
src/: lib.rs  main.rs  sample_cli.rs
src/ai/: anthropic.rs  auth_common.rs  gemini.rs  github_copilot.rs  mod.rs  openai.rs  openai_codex.rs  request_policy.rs
src/ai/anthropic/: convert.rs  protocol.rs  streaming.rs
src/ai/gemini/: convert.rs  protocol.rs
src/ai/github_copilot/: auth.rs  convert.rs  protocol.rs
src/ai/openai/: convert.rs  protocol.rs
src/ai/openai_codex/: auth.rs  convert.rs  protocol.rs  streaming.rs
src/ai/providers/: anthropic.rs  gemini.rs  github_copilot.rs  google_ai_studio.rs  grok.rs  kimi.rs  kimi_coding.rs  mod.rs  openai.rs  openai_codex.rs  sakura.rs  zai.rs  zai_coding.rs
src/context/: limits.rs  manager.rs  mod.rs  text.rs
src/mcp/: mod.rs
src/sample_cli/: io.rs  settings.rs  streaming.rs
