[package]
name = "connect_llm"
version = "0.1.2"
edition = "2024"
description = "Rust library for using multiple LLM providers through a unified API"
readme = "README.md"
repository = "https://github.com/Rumia-Channel/connect_llm"

[features]
default = []
sample-cli = ["dep:crossterm"]

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
crossterm = { version = "0.28", optional = true }
futures-util = "0.3"
http = "1"
rand = "0.8"
reqwest = { version = "0.13.2", features = ["blocking", "json", "stream"] }
rmcp = { version = "1.3.0", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync"] }

[dev-dependencies]

[[bin]]
name = "connect_llm"
path = "src/main.rs"
required-features = ["sample-cli"]
